@@ -3,6 +3,7 @@ Version: 0.1.3
 Date: 2024-09-28
   Bugfixes:
     - blocked decomposition for recipes with multiple outputs. The total raw calculation in recipes resulted in "Too complex" error.
+    - light emitting diode is now researched with advanced electronics 2
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.2
 Date: 2024-09-28
